fix the margins to feel less cramped

--- a/blogstyles.css
+++ b/blogstyles.css
@@ -34,8 +34,17 @@ ul, li {
 section > div {
     margin: 0% 15%;
     padding-top: 1%;
-    padding-bottom: 1%;
+    margin: 0% 10%;
+
+    @media screen and (min-width: 600px) {
+        margin: 0% 15%;
+    }
+
+    @media screen and (min-width: 1300px) {
+        margin: 0% 25%;
+    }
 }
+
 
 /*
  * the section title
