--- a/styles.css
+++ b/styles.css
@@ -72,9 +72,17 @@ section {
 }
 
 .section-with-buffer {
-    margin: 0% 15%;
     padding-top: 1%;
     padding-bottom: 1%;
+    margin: 0% 10%;
+
+    @media screen and (min-width: 600px) {
+        margin: 0% 15%;
+    }
+
+    @media screen and (min-width: 1300px) {
+        margin: 0% 25%;
+    }
 }
 
 .section-with-small-buffer {
